:sparkles: initial template for kafka, schema registry and docker things in express/js project

--- a/movie-app/package.json
+++ b/movie-app/package.json
@@ -2,6 +2,9 @@
   "name": "movie-app",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+	"start": "node index.js"
+  },
   "author": "Gustavo Valle",
   "license": "MIT",
   "dependencies": {
