:sparkles: adding template for send changes to kafka

--- a/food-app/Dockerfile
+++ b/food-app/Dockerfile
@@ -4,8 +4,6 @@ WORKDIR /app
 
 COPY requirements.txt /app
 RUN pip3 install -r requirements.txt --no-cache-dir
-COPY . /app 
+COPY . /app
 
-ENTRYPOINT ["python3"] 
-
-CMD ["manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
