--- a/food-app/Taskfile.yml
+++ b/food-app/Taskfile.yml
@@ -3,11 +3,11 @@ version: '3'
 dotenv: ['.env', '.env.test']
 
 vars:
-  LOCAL_SERVICES: "kafka zookeeper"
+  LOCAL_SERVICES: "kafka zookeeper app"
   BUILD_CMD: "docker-compose build --no-cache"
   RUN_CMD: "docker-compose up -d {{.LOCAL_SERVICES}}"
   STOP_CMD: "docker-compose down -v"
-  LOGS_CMD: "docker-compose logs -f --tail=500"
+  LOGS_CMD: "docker-compose logs -f --tail=500 app"
 
 tasks:
   run:
