--- a/food-app/requirements.txt
+++ b/food-app/requirements.txt
@@ -2,6 +2,7 @@ aiofiles==22.1.0
 anyio==3.6.2
 asgiref==3.5.2
 attrs==22.1.0
+autopep8==2.0.0
 certifi==2022.9.24
 confluent-kafka==1.9.2
 Django==4.1.2
@@ -16,11 +17,13 @@ jsonschema==4.16.0
 kafka-python==2.0.2
 pkgutil_resolve_name==1.3.10
 protobuf==4.21.9
+pycodestyle==2.9.1
 pyrsistent==0.18.1
 python-schema-registry-client==2.4.1
 pytz==2022.5
 rfc3986==1.5.0
 sniffio==1.3.0
 sqlparse==0.4.3
+tomli==2.0.1
 typing_extensions==4.4.0
 zipp==3.10.0
