--- a/food-app/Taskfile.yml
+++ b/food-app/Taskfile.yml
@@ -3,7 +3,7 @@ version: '3'
 dotenv: ['.env', '.env.test']
 
 vars:
-  LOCAL_SERVICES: "kafka zookeeper app"
+  LOCAL_SERVICES: "kafka app schema-registry"
   BUILD_CMD: "docker-compose build --no-cache"
   RUN_CMD: "docker-compose up -d {{.LOCAL_SERVICES}}"
   STOP_CMD: "docker-compose down -v"
