--- a/food-app/docker-compose.yaml
+++ b/food-app/docker-compose.yaml
@@ -12,22 +12,44 @@ services:
       context: .
     env_file:
       - .env
-  zookeeper:
-    image: wurstmeister/zookeeper:3.4.6
-    ports:
-     - "2181:2181"
+    networks:
+      - local-network
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
   kafka:
-    image: wurstmeister/kafka
-    ports:
-     - "9092:9092"
-    expose:
-     - "9093"
+    image: 'vectorized/redpanda:v21.11.14'
+    hostname: "kafka"
+    container_name: "kafka"
+    command:
+      - redpanda
+      - start
+      - --smp
+      - '1'
+      - --reserve-memory
+      - 0M
+      - --overprovisioned
+      - --node-id
+      - '0'
+      - --kafka-addr
+      - INTERNAL://0.0.0.0:9092,OUTSIDE://0.0.0.0:9094,PLAINTEXT://0.0.0.0:9093
+      - --advertise-kafka-addr
+      - INTERNAL://kafka:9092,OUTSIDE://host.docker.internal:9094,PLAINTEXT://kafka:9093
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
+    networks:
+      - local-network
+  schema-registry:
+    image: 'confluentinc/cp-schema-registry:7.0.1'
+    hostname: "schema-registry"
+    container_name: "schema-registry"
+    depends_on:
+      - kafka
     environment:
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
-      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "topic_test:1:1"
-    volumes:
-     - /var/run/docker.sock:/var/run/docker.sock
+      SCHEMA_REGISTRY_HOST_NAME: 'schema-registry'
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: "PLAINTEXT://kafka:9093"
+    networks:
+      - local-network
+
+networks:
+  local-network:
+    name: network-food-app
