considering as a module

--- a/movie-app/package.json
+++ b/movie-app/package.json
@@ -2,6 +2,7 @@
   "name": "movie-app",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
