--- a/food-app/pyproject.toml
+++ b/food-app/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.10"
 Django = "^4.1.4"
 pre-commit = "^2.20.0"
 djangorestframework = "^3.14.0"
+pytest = "^7.2.0"
+pytest-django = "^4.5.2"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^2.0.1"
