--- a/food-app/pyproject.toml
+++ b/food-app/pyproject.toml
@@ -14,6 +14,10 @@ pytest-django = "^4.5.2"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^2.0.1"
+mypy = "^0.991"
+flake8 = "^6.0.0"
+black = "^22.12.0"
+pre-commit = "^2.20.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
