--- a/food-app/pyproject.toml
+++ b/food-app/pyproject.toml
@@ -18,6 +18,7 @@ mypy = "^0.991"
 flake8 = "^6.0.0"
 black = "^22.12.0"
 pre-commit = "^2.20.0"
+freezegun = "^1.2.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
