--- a/supplier/pyproject.toml
+++ b/supplier/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Gustavo Valle"]
 python = "^3.10"
 fastapi = "^0.89.1"
 orjson = "^3.8.5"
+black = "^22.12.0"
 
 [tool.poetry.dev-dependencies]
 
