--- a/product/pyproject.toml
+++ b/product/pyproject.toml
@@ -11,6 +11,7 @@ pre-commit = "^2.20.0"
 djangorestframework = "^3.14.0"
 pytest = "^7.2.0"
 pytest-django = "^4.5.2"
+protobuf = "^4.21.12"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^2.0.1"
