--- a/product/pyproject.toml
+++ b/product/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.14.0"
 pytest = "^7.2.0"
 pytest-django = "^4.5.2"
 protobuf = "^4.21.12"
+djangogrpcframework = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^2.0.1"
