--- a/product/pyproject.toml
+++ b/product/pyproject.toml
@@ -11,7 +11,7 @@ pre-commit = "^2.20.0"
 djangorestframework = "^3.14.0"
 pytest = "^7.2.0"
 pytest-django = "^4.5.2"
-protobuf = "^4.21.12"
+protobuf = ">=3.20.0,<3.21.0"
 djangogrpcframework = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
