--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,13 +3,13 @@ version: '3'
 dotenv: ['.env', '.env.test']
 
 vars:
-  LOCAL_SERVICES: "movie kafka schema-registry"
+  LOCAL_SERVICES: "kafka schema-registry postgres product"
   BUILD_CMD: "docker-compose build --no-cache"
   RUN_CMD: "docker-compose up -d {{.LOCAL_SERVICES}}"
   STOP_CMD: "docker-compose down -v"
-  BASH_MOVIE_CMD: "docker exec -it movie-app sh"
   LOGS_CMD: "docker-compose logs -f --tail=500"
-  LOGS_MOVIE_CMD: "docker-compose logs -f --tail=500 movie-app"
+  BASH_PRODUCT_CMD: "docker exec -it product-app sh"
+  LOGS_PRODUCT_CMD: "docker-compose logs -f --tail=500 product-app"
 
 tasks:
   run:
@@ -25,15 +25,15 @@ tasks:
     desc: Stop env
     cmds:
       - '{{.STOP_CMD}}'
-  movie:
+  product:
     desc: Enter movie bash
     cmds:
-      - '{{.BASH_MOVIE_CMD}}'
+      - '{{.BASH_PRODUCT_CMD}}'
   logs:
     desc: Docker logs
     cmds:
       - '{{.LOGS_CMD}}'
-  logs:movie:
-    desc: Docker movie logs
+  logs:product:
+    desc: Docker product logs
     cmds:
-      - '{{.LOGS_MOVIE_CMD}}'
+      - '{{.LOGS_PRODUCT_CMD}}'
