--- a/product/pyproject.toml
+++ b/product/pyproject.toml
@@ -15,6 +15,8 @@ protobuf = ">=3.20.0,<3.21.0"
 djangogrpcframework = "^0.2.1"
 black = "^22.12.0"
 django-prometheus = "^2.2.0"
+kafka-python = "^2.0.2"
+grpcio = "^1.51.1"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^2.0.1"
